--- a/orders.html
+++ b/orders.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paninosoft | Ordini</title>
-  <link rel="stylesheet" href="res/styles.css" type='text/css' /> <!-- Nuovo file css -->
-  <link rel="icon" type="image/x-icon" href="res/icon.ico">
+  <link rel="stylesheet" href="res/styles/orders.css" type='text/css' /> <!-- Nuovo file css -->
+  <link rel="icon" type="image/x-icon" href="res/styles/icon.ico">
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
 </head>
@@ -48,7 +48,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script type="text/javascript" src="mostra_ordini.js"></script>
+    <script type="text/javascript" src="res/scripts/orders.js"></script>
 </body>
 
 </html>
