--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,7 @@
             <button id="btnStorage">Magazzino</button>
             <button id="btnUsers">Utenti</button>
         </main>
-        <footer> Copyright ©PaninosoftSRL 2023</footer>
+        <footer> © 2023 Paninosoft Srl - P.IVA 02198320034 </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="res/scripts/auth.js"></script>
