--- a/orders.html
+++ b/orders.html
@@ -49,6 +49,7 @@
       crossorigin="anonymous"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script type="text/javascript" src="res/scripts/orders.js"></script>
+    <script src="res/scripts/resumeSession.js"></script>
 </body>
 
 </html>
