prima implementazione sistema permessi

--- a/orders.html
+++ b/orders.html
@@ -48,8 +48,9 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script type="text/javascript" src="res/scripts/orders.js"></script>
+    <script src="res/scripts/permissionManager.js"></script>
     <script src="res/scripts/resumeSession.js"></script>
+    <script type="text/javascript" src="res/scripts/orders.js"></script>
 </body>
 
 </html>
