--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script src="res/scripts/resumeSession.js"></script>
 <script>
     if(!sessionStorage.getItem("idk"))
-        window.location.replace("dashboard.html");
+        window.location.replace("auth.html?type=signin");
 </script>
