--- a/inventory.html
+++ b/inventory.html
@@ -118,6 +118,7 @@
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
         <script src="res/scripts/permissionManager.js"></script>
         <script src="res/scripts/resumeSession.js"></script>
+        <script src="res/scripts/auth.js"></script>
     <script src="res/scripts/utils.js"></script>
     <script src="res/scripts/inventory.js"></script>
     <script>InventoryListHeight(); addEventListener("resize", (event) => { InventoryListHeight() });</script>
