--- a/orders.html
+++ b/orders.html
@@ -50,6 +50,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="res/scripts/permissionManager.js"></script>
     <script src="res/scripts/resumeSession.js"></script>
+    <script src="res/scripts/auth.js"></script>
     <script type="text/javascript" src="res/scripts/orders.js"></script>
 </body>
 
