--- a/dashboard.html
+++ b/dashboard.html
@@ -31,9 +31,9 @@
         </header>
 
         <main>
-            <button id="btnOrder">Ordini</button>
-            <button id="btnStorage">Magazzino</button>
-            <button id="btnUsers">Utenti</button>
+            <button class="hidden-by-default" id="btnOrder">Ordini</button>
+            <button class="hidden-by-default" id="btnStorage">Magazzino</button>
+            <button class="hidden-by-default" id="btnUsers">Utenti</button>
         </main>
         <footer> © 2023 Paninosoft Srl - P.IVA 02198320034 </footer>
     </div>
