--- a/account.html
+++ b/account.html
@@ -32,7 +32,7 @@
         <main>
             <div class="user-card">
                 <div>
-                    <img src="res/styles/pic.png" class="profile">
+                    <img src="https://thispersondoesnotexist.com/image" class="profile">
                 </div>
                 <div>
                     <h5 class="account-name">Nome</h5>
