--- a/inventory.html
+++ b/inventory.html
@@ -35,6 +35,53 @@
                         </button>
                     </div>
                 </div>
+
+                <table class="table inventory-list-items">
+                    <tr class="item-details item-header">
+                        <th class="checklist-column">
+                            
+                        </th>
+                        <th class="id-column">
+                            <p>ID</p>
+                        </th>
+                        <th class="id-name">
+                            <p>Nome</p>
+                        </th>
+                        <th class="id-price">
+                            <p>Prezzo</p>
+                        </th>
+                        <th class="id-column">
+                            <p>Tag</p>
+                        </th>
+                        <th class="id-column">
+                            <p>Quantità</p>
+                        </th>
+                    </tr>
+
+                    <!-- <tr class="item-details">
+                        <td class="checklist-column">
+                            <p>
+                                <input type="checkbox" name="checklist" id="checklist">
+                            </p>
+                        </td>
+                        <td class="id-column">
+                            <p>ID</p>
+                        </td>
+                        <td class="id-name">
+                            <p>Nome</p>
+                        </td>
+                        <td class="id-price">
+                            <p>Prezzo</p>
+                        </td>
+                        <td class="id-column">
+                            <p>Tag</p>
+                        </td>
+                        <td class="id-column">
+                            <p>Quantità</p>
+                        </td>
+                    </tr> -->
+                </table>
+
                 <div class="inventory-list-items">
                     <div class="item-details item-header">
                         <div class="checklist-column">
