--- a/users.html
+++ b/users.html
@@ -8,22 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="res/styles/inventory.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css">
     <title>Paninosoft | Utenti</title>
-    <style>
-        #row li {
-            display: inline;
-            margin-left: 20px;
-            margin-right: 20px;
-        }
-
-        #row{
-            padding-right: 0px;
-        }
-
-        /* .container {
-            display: inline-block;
-        } */
-    </style>
 </head>
 
 <body>
@@ -33,18 +19,20 @@
         <p>Utenti</p>
     </header>
 
-    <div>
-        <ul id="row">
-            <li>Nome</li>
-            <li>Cognome</li>
-            <li>Classe</li>
-            <li>E-mail</li>
-        </ul>
-    </div>
-    <div class="container">
-        <ul id="row">
-        </ul>
-    </div>
+    <table id="table_id" class="display">
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>Cognome</th>
+            <th>Classe</th>
+            <th>Sezione</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody id="table-body">
+
+        </tbody>
+      </table>
 
 
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
@@ -53,6 +41,7 @@
         <script src="res/scripts/resumeSession.js"></script>
         <script src="res/scripts/auth.js"></script>
     <script src="res/scripts/manageUsers.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
 </body>
 
 </html>
